--- a/src/Client/MongoSample.Web/MongoSample.Web.csproj
+++ b/src/Client/MongoSample.Web/MongoSample.Web.csproj
@@ -190,6 +190,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BasketModel.cs" />
+    <Compile Include="Models\StatsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\WindsorControllerFactory.cs" />
   </ItemGroup>
@@ -303,6 +304,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Basket.cshtml" />
+    <Content Include="Views\Home\Stats.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
